# TODO-Next

./: README.md  old_task.db  pyproject.toml  sorted_task.json  task.json
todo_next/: agent.py  db.py  task_base.py  templates.py  utils.py
