[tool.poetry]
name = "todo-next"
version = "0.1.0"
description = ""
authors = ["satoru814 <satoru-sakamoto@c-fo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.125"
openai = "^0.27.2"

[tool.poetry.scripts]
task-push = "todo_next.agent:push"
task-list = "todo_next.agent:list"
task-sort = "todo_next.agent:sort"
task-done = "todo_next.agent:done"
task-qa = "todo_next.agent:qa"
task-old = "todo_next.agent:old_qa"
task-gen = "todo_next.agent:gen"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"